cancel function and notification permission

--- a/src/components/AddressPage/Address.css
+++ b/src/components/AddressPage/Address.css
@@ -80,7 +80,7 @@ width: 140px;
 height: 50px;
 left: 190px;
 top: 510px;
-
+cursor: pointer;
 border: 1px solid #E20880;
 box-sizing: border-box;
 border-radius: 4px;
