--- a/src/components/LastPage/Last.css
+++ b/src/components/LastPage/Last.css
@@ -1,116 +1,112 @@
-#congrats{
-    position: absolute;
-    width: 105px;
-    height: 28px;
-    left: 128px;
-    top: 11px;
+#congrats {
+  position: absolute;
+  width: 360px;
+  height: 28px;
+  /* left: 128px; */
+  top: 90px;
+  text-align: center;
 }
-#congrats-text{
-
-
-font-family: Roboto;
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 28px;
-
-color: #000000;
+.congrats-text {
+  /* font-style: normal; */
+  /* font-weight: 500; */
+  font-size: 24px;
+  /* line-height: 28px; */
+  color: #374151;
 }
 
-#last-epns-text{
-    position: absolute;
-width: 186px;
-height: 14px;
-left: 30px;
 
-top: 380px;
-
-
-font-family: Roboto;
-font-style: normal;
-font-weight: 300;
-font-size: 12px;
-line-height: 14px;
-/* identical to box height */
-
-
-color: #000000;
+.check-test {
+  position: absolute;
+  width: 360px;
+  /* left: 30px; */
+  top: 190px;
+  display: flex;
+  justify-content: center;
 }
 
-#bold-epns{
-    font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 14px;
+.last-epns-text {
+  position: absolute;
+  width: 360px;
+  height: 14px;
+  top: 400px;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  color: #6b7280;
+  /* identical to box height */
 }
 
-#description-text{
-    position: absolute;
-width: 300px;
-height: 42px;
-left: 30px;
-
-top: 435px;
-font-family: Roboto;
-font-style: normal;
-font-weight: 300;
-font-size: 12px;
-line-height: 14px;
-
-color: #000000;
+#bold-epns {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
 }
 
-#description{
-    font-family: Roboto;
-font-style: normal;
-font-weight: 300;
-font-size: 12px;
-line-height: 14px;
-
-color: #000000;
+.description-text {
+  position: absolute;
+  width: 300px;
+  height: 42px;
+  left: 30px;
+  top: 435px;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 16px;
+  color: #6b7280;
+  text-align: center;
 }
 
-#epnsio-text{
-    font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 14px;
-text-decoration-line: underline;
+#description {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 14px;
 
-color: #E20880;
+  color: #000000;
 }
 
-#bold-text{
-    font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 14px;
+#epnsio-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  text-decoration-line: underline;
 
-color: #000000;
+  color: #e20880;
 }
 
-#complete-button{
-    position: absolute;
-width: 300px;
-height: 50px;
-left: 30px;
-top: 510px;
+#bold-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
 
-background: #674C9F;
-border-radius: 4px;
-color:white
+  color: #000000;
 }
 
-#check-icon{
-    position: absolute;
-    z-index:4;
-left: 40.83%;
-right: 40.83%;
-top: 34.83%;
-bottom: 56.83%;
-background: url("../../assests/check_24px.png");
-background-repeat: no-repeat;
+#complete-button {
+  position: absolute;
+  width: 300px;
+  height: 50px;
+  left: 30px;
+  top: 510px;
+
+  background: #674c9f;
+  border-radius: 4px;
+  color: white;
+}
+
+#check-icon {
+  position: absolute;
+  z-index: 4;
+  left: 40.83%;
+  right: 40.83%;
+  top: 34.83%;
+  bottom: 56.83%;
+  background: url("../../assests/check_24px.png");
+  background-repeat: no-repeat;
 }
