--- a/src/components/Circle/Circle3.css
+++ b/src/components/Circle/Circle3.css
@@ -11,3 +11,28 @@ transform: rotate(93.89deg);
 z-index:1;
 
 }
+#circle3-center {
+    position: absolute;
+    width: 220px;
+    height: 220px;
+    left: 94px;
+    top: 126.28px;
+  
+    background: linear-gradient(180deg, #674C9F 0%, rgba(103, 76, 159, 0) 100%);
+  transform: matrix(-0.09, -1, -1, 0.09, 0, 0);
+    border-radius: 50%;
+    z-index: 1;
+  }
+  
+  #circle3-right {
+    position: absolute;
+    width: 363.58px;
+    height: 363.58px;
+    left: 154.91px;
+    top: -208.47px;
+    
+    background: linear-gradient(180deg, #674C9F 0%, rgba(103, 76, 159, 0) 100%);
+    transform: matrix(0.07, 1, 1, -0.07, 0, 0);
+    border-radius: 50%;
+    z-index:1;
+}
