--- a/src/components/HomePage/Info.css
+++ b/src/components/HomePage/Info.css
@@ -1,21 +1,34 @@
-#box{
-    position: absolute;
-width: 300px;
-height: 84px;
-left: 30px;
-top: 354px;
+.box {
+  position: absolute;
+  width: 300px;
+  height: 84px;
+  left: 30px;
+  top: 320px;
+  background: #ffffff;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.3;
+  color: #9ca3af;
+}
 
-background: #FFFFFF;
-border: 0.5px solid #35C5F3;
-box-sizing: border-box;
-box-shadow: 8px 8px 20px rgba(0, 0, 0, 0.05);
-border-radius: 4px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 14px;
-
-color: rgba(0, 0, 0, 0.5);
+.link-page {
+  position: absolute;
+  width: 300px;
+  height: 84px;
+  left: 30px;
+  top: 485px;
+  color: #9ca3af;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.3;
+}
+.link-home {
+  color: #e20880;
+  text-decoration: none;
+}
+.link-home:hover {
+  text-decoration: underline;
 }
