--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Strawford' !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-@font-face {
-  font-family: "Theinhardt";
-  src: local("Theinhardt"),
-    url("./assests/fonts/Theinhardt\ Pan\ Bold.otf") format("truetype");
+*{
+  font-family: 'Strawford' !important;
 }
 
 @font-face {
-  font-family: "Theinhardtt";
-  src: local("Theinhardt"),
-    url("./assests/fonts/Theinhardt\ Pan\ Medium.otf") format("truetype");
+  font-family: 'Strawford';
+  src: url('assests/fonts/Strawford-Regular.otf');  
 }
+
+
 
 .bold-font {
-  font-family: "Theinhardt";
+  font-family: "Strawford";
   font-weight: bold;
 }
 
 .regular-font {
-  font-family: "Lato", sans-serif;
+  font-family: "Strawford";
   font-weight: bold;
 }
 
 .regular {
-  font-family: "Lato", sans-serif;
+  font-family: "Strawford";
 }
-
 .hover-effect:hover {
   opacity: 0.8;
 }
@@ -54,6 +45,14 @@ code {
   height: 600px;
   overflow-y:unset;
   overflow-x: hidden;
+}
+
+.standard-page{
+  width: 360px;
+  height: 600px;
+  overflow-y:unset;
+  overflow-x: hidden;
+  display: flex; flex-direction: column;
 }
 
 /* Change the white to any color */
