--- a/src/pages/HomePage/Info.css
+++ b/src/pages/HomePage/Info.css
@@ -10,7 +10,7 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 1.3;
-  color: #9ca3af;
+  color: #657795;
 }
 
 .link-page {
@@ -19,7 +19,7 @@
   height: 84px;
   left: 30px;
   top: 485px;
-  color: #9ca3af;
+  color: #657795;
   text-align: center;
   font-size: 12px;
   font-weight: 500;
