--- a/src/pages/NotificationPage/Tooltip.css
+++ b/src/pages/NotificationPage/Tooltip.css
@@ -11,7 +11,7 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 1.3;
-    color: #9ca3af;
+    color: #657795;
     z-index: 99999;
     display: block; */
     padding: 7px;
@@ -34,7 +34,7 @@
     height: 84px;
     left: 30px;
     top: 485px;
-    color: #9ca3af;
+    color: #657795;
     text-align: center;
     font-size: 12px;
     font-weight: 500;
